# Ouroboros

./: .gitignore  Cargo.toml  NOTICE  README.md
src/: main.rs  memory.rs  symbol_resolver.rs  test.rs
src/ir/: abstract_syntax_tree.rs  address.rs  basic_block.rs  control_flow_graph.rs  expression.rs  high_function.rs  mod.rs  program_tree_structure.rs  scope.rs  utils.rs
src/loaders/: goblin.rs  load_with_goblin.rs  mod.rs
src/memory/: mod.rs  navigation.rs
src/tab_viewer/: bb_graph.rs  decompiler.rs  instruction_view.rs  mod.rs  navigation.rs  section_list.rs  terminal.rs  theme.rs
src/tab_viewer/memory_view/: asm_view.rs  hexdump_view.rs  mod.rs
