[package]
name = "bin_ast"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.32.1"
egui = { version = "0.32", features = ["accesskit", "rayon"] }
egui_dock = "0.17.0"
egui_extras = "0.32.1"
egui_graphs = "0.28.0"
emath = "0.32.1"
enum-map = "2.7.3"
enumset = "1.1.10"
nodit = "0.9.2"
petgraph = "0.8.2"
rayon = "=1.10.0"
smallvec = "1.15.1"

sleigh-runtime = { git = "https://github.com/icicle-emu/icicle-emu" }
sleigh-compile = { git = "https://github.com/icicle-emu/icicle-emu" }
pcode = { git = "https://github.com/icicle-emu/icicle-emu" }
goblin = { git = "https://github.com/m4b/goblin"}
rfd = "0.15.4"
# alacritty_terminal = "0.25.0"


[profile.release]
lto = "thin"
strip = "symbols"
panic = "abort"
